dapr_config/dapr-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapr-dashboard
  namespace: dapr-system
  labels:
    app: dapr-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: runtime-monitoring.northeurope.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: dapr-dashboard
                port:
                  number: 8080
            path: /dapr(/|$)(.*)
            pathType: Prefix
